--- a/registration form.html
+++ b/registration form.html
@@ -6,7 +6,7 @@
     <title>Registration    </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body class="bg-dark text-light" ><h3>Please register with us </h3><ul class="nav nav-tabs">
+  <body class="bg-dark text-light" ><h3>Please register with us:Beta Websites </h3><ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="#">Active</a>
   </li>
@@ -27,6 +27,7 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
+  <br>
  <div class="container t b x"  >  <form class="row g-3">
   <div class="col-md-6">
 <div class="row g-3">
@@ -37,7 +38,17 @@
     <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
   </div>
 </div>
-
+    <br>
+<div class="input-group has-validation">
+  <span class="input-group-text">@</span>
+  <div class="form-floating is-invalid">
+    <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" required>
+    <label for="floatingInputGroup2">Username</label>
+  </div>
+  <div class="invalid-feedback">
+    Please choose a username.
+  </div>
+</div>
     <label for="inputEmail4" class="form-label">E-mail</label>
     <input type="email" class="form-control" id="inputEmail4">
   </div>
