--- a/trial.html
+++ b/trial.html
@@ -10,10 +10,7 @@
     <h1>Hello, world!</h1>
     <div class="row grid gap-2 column-gap-3">
       <div class="col-md-3 bg-primary ">
-        <div class="row">
-          <div class="col-md-6">a</div>
-          <div class="col-md-6">b</div>
-        </div>
+        <div class="row"></div>
       </div>
       <div class="col-md-3 bg-warning">div 2</div>
       <div class="col-md-3 bg-info">div 3</div>
